fix(container): add min-width to fix layout issue

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,4 +1,5 @@
 .container {
+    min-width: 460px;
     color: #646cff;
 }
 
